--- a/src/ui/App.scss
+++ b/src/ui/App.scss
@@ -886,6 +886,63 @@ body {
             }
           }
         }
+
+        /*--sprite-animation-css--*/
+        .end{ background-position: right 0;}
+        .start.A{ animation: anim_A 2s steps(61) forwards; }
+        .start.B{ animation: anim_B 2s steps(100) forwards; }
+        .start.C{ animation: anim_C 2s steps(58) forwards; }
+        .start.D{ animation: anim_D 2s steps(77) forwards; }
+        .start.E{ animation: anim_E 2s steps(71) forwards; }
+        .start.F{ animation: anim_F 2s steps(60) forwards; }
+        .start.G{ animation: anim_G 2s steps(73) forwards; }
+        .start.H{ animation: anim_H 2s steps(67) forwards; }
+        .start.I{ animation: anim_I 2s steps(25) forwards; }
+        .start.J{ animation: anim_J 2s steps(47) forwards; }
+        .start.K{ animation: anim_K 2s steps(86) forwards; }
+        .start.L{ animation: anim_L 2s steps(50) forwards; }
+        .start.M{ animation: anim_M 2s steps(83) forwards; }
+        .start.N{ animation: anim_N 2s steps(70) forwards; }
+        .start.O{ animation: anim_O 2s steps(67) forwards; }
+        .start.P{ animation: anim_P 2s steps(68) forwards; }
+        .start.Q{ animation: anim_Q 2s steps(77) forwards; }
+        .start.R{ animation: anim_R 2s steps(102) forwards; }
+        .start.S{ animation: anim_S 2s steps(64) forwards; }
+        .start.T{ animation: anim_T 2s steps(51) forwards; }
+        .start.U{ animation: anim_U 2s steps(70) forwards; }
+        .start.V{ animation: anim_V 2s steps(47) forwards; }
+        .start.W{ animation: anim_W 2s steps(78) forwards; }
+        .start.X{ animation: anim_X 2s steps(55) forwards; }
+        .start.Y{ animation: anim_Y 2s steps(45) forwards; }
+        .start.Z{ animation: anim_Z 2s steps(63) forwards; }
+
+        @keyframes anim_A { 100% { background-position: -4880px 0; } }
+        @keyframes anim_B { 100% { background-position: -7500px 0; } }
+        @keyframes anim_C { 100% { background-position: -4930px 0; } }
+        @keyframes anim_D { 100% { background-position: -6314px 0; } }
+        @keyframes anim_E { 100% { background-position: -6035px 0; } }
+        @keyframes anim_F { 100% { background-position: -4920px 0; } }
+        @keyframes anim_G { 100% { background-position: -6205px 0; } }
+        @keyframes anim_H { 100% { background-position: -5561px 0; } }
+        @keyframes anim_I { 100% { background-position: -625px 0; } }
+        @keyframes anim_J { 100% { background-position: -2914px 0; } }
+        @keyframes anim_K { 100% { background-position: -6880px 0; } }
+        @keyframes anim_L { 100% { background-position: -3500px 0; } }
+        @keyframes anim_M { 100% { background-position: -7885px 0; } }
+        @keyframes anim_N { 100% { background-position: -5950px 0; } }
+        @keyframes anim_O { 100% { background-position: -6030px 0; } }
+        @keyframes anim_P { 100% { background-position: -5100px 0; } }
+        @keyframes anim_Q { 100% { background-position: -6930px 0; } }
+        @keyframes anim_R { 100% { background-position: -7650px 0; } }
+        @keyframes anim_S { 100% { background-position: -5120px 0; } }
+        @keyframes anim_T { 100% { background-position: -3723px 0; } }
+        @keyframes anim_U { 100% { background-position: -6090px 0; } }
+        @keyframes anim_V { 100% { background-position: -3760px 0; } }
+        @keyframes anim_W { 100% { background-position: -10920px 0; } }
+        @keyframes anim_X { 100% { background-position: -4950px 0; } }
+        @keyframes anim_Y { 100% { background-position: -4050px 0; } }
+        @keyframes anim_Z { 100% { background-position: -5670px 0; } }
+
       }
 
       .screen_4 {
@@ -914,6 +971,32 @@ body {
             }
           }
         }
+
+        /*--sprite-animation-css--*/
+        .end{ background-position: right 0;}
+        .start.A{ animation: anim_1 2s steps(24) forwards; }
+        .start.B{ animation: anim_2 2s steps(64) forwards; }
+        .start.C{ animation: anim_3 2s steps(77) forwards; }
+        .start.D{ animation: anim_4 2s steps(66) forwards; }
+        .start.E{ animation: anim_5 2s steps(88) forwards; }
+        .start.F{ animation: anim_6 2s steps(69) forwards; }
+        .start.G{ animation: anim_7 2s steps(47) forwards; }
+        .start.H{ animation: anim_8 2s steps(80) forwards; }
+        .start.I{ animation: anim_9 2s steps(85) forwards; }
+        .start.J{ animation: anim_10 2s steps(96) forwards; }
+        
+
+        @keyframes anim_1 { 100% { background-position: -600px 0; } }
+        @keyframes anim_2 { 100% { background-position: -4480px 0; } }
+        @keyframes anim_3 { 100% { background-position: -5005px 0; } }
+        @keyframes anim_4 { 100% { background-position: -4488px 0; } }
+        @keyframes anim_5 { 100% { background-position: -5896px 0; } }
+        @keyframes anim_6 { 100% { background-position: -3795px 0; } }
+        @keyframes anim_7 { 100% { background-position: -2914px 0; } }
+        @keyframes anim_8 { 100% { background-position: -6000px 0; } }
+        @keyframes anim_9 { 100% { background-position: -4250px 0; } }
+        @keyframes anim_10 { 100% { background-position: -11040px 0; } }
+        
       }
       .screen_5 {
         .letterBox{
